--- a/seanproject/seanproject/templates/login.html
+++ b/seanproject/seanproject/templates/login.html
@@ -2,6 +2,48 @@
 
 {% block content %}
 
+<style>
+    body {
+        background-image: url('https://sm.pcmag.com/t/pcmag_me/photo/default/razer-raiju2-1129858-1280x0_ndkg.1200.jpg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+    }
+    h2 {
+        background-color: #ffffcc;
+        background-size: cover;
+        text-align: left;
+        font-family: courier;
+        color: black;
+        opacity: 0.7;
+    }
+
+    h3 {
+        background-color: #ffffcc;
+        background-size: cover;
+        text-align: left;
+        font-family: courier;
+        color: black;
+        opacity: 0.7;
+    }
+    form {
+        background-color: #ffffcc;
+        background-size: cover;
+        text-align: left;
+        font-family: courier;
+        color: black;
+        opacity: 0.7;
+    }
+    table {
+        background-color: #ffffcc;
+        background-size: cover;
+        text-align: left;
+        font-family: courier;
+        color: black;
+        opacity: 0.7;
+    }
+</style>
+
 <h2>{{ title }}</h2>
 
 {% with messages = get_flashed_messages(with_categories=true) %}
