--- a/seanproject/seanproject/templates/about.html
+++ b/seanproject/seanproject/templates/about.html
@@ -2,6 +2,40 @@
 
 {% block content %}
 
+<style>
+    body {
+        background-image: url('https://www.ubp.com/files/live/sites/ubp/files/banner_newsroom/200124_Vignette_Web_Detail.jpg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+    }
+    p {
+        background-color: #99ff99;
+        background-size: cover;
+        text-align: center;
+        font-family: courier;
+        color: black;
+        opacity: 0.7;
+    }
+    h2 {
+        background-color: #99ff99;
+        background-size: cover;
+        text-align: center;
+        font-family: courier;
+        color: black;
+        opacity: 0.7;
+    }
+
+    h3 {
+        background-color: #99ff99;
+        background-size: cover;
+        text-align: center;
+        font-family: courier;
+        color: black;
+        opacity: 0.7;
+    }
+</style>
+
 <h2>{{ title }}.</h2>
 <h3>{{ message }}</h3>
 
