--- a/seanproject/seanproject/templates/layout.html
+++ b/seanproject/seanproject/templates/layout.html
@@ -24,9 +24,10 @@
                 <ul class="nav navbar-nav">
                     <li><a href="{{ url_for('home') }}">Home</a></li>
                     <li><a href="{{ url_for('about') }}">About</a></li>
-                    <li><a href="{{ url_for('dataSet') }}">Data</a></li>
+                    <li><a href="{{ url_for('data') }}">Data</a></li>
                     <li><a href="{{ url_for('Register') }}">Register</a></li>
                     <li><a href="{{ url_for('contact') }}">Contact</a></li>
+                    <li><a href="{{ url_for('login') }}">Login</a></li>
                 </ul>
             </div>
         </div>
