--- a/seanproject/seanproject/templates/register.html
+++ b/seanproject/seanproject/templates/register.html
@@ -2,6 +2,15 @@
 
 {% block content %}
 
+<style>
+    body {
+        background-image: url('https://www.ravalmatic.com/wp-content/uploads/2017/05/multiplayer-games.jpg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+    }
+</style>
+
 <h2>{{ title }}</h2>
 
 {% with messages = get_flashed_messages(with_categories=true) %}
